--- a/index.html
+++ b/index.html
@@ -19,94 +19,137 @@
     />
   </head>
   <body>
-    <div class="main">
-      <header>
-        <div class="headermain">
-          <div class="leftheader">
-            <div id="logo">
-              <img
-                src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png"
-              />
-            </div>
-            <form action="" method="get">
-              <div class="anotherone">
-                <div class="searchbox">
-                  <input
-                    type="search"
-                    maxlength="2048"
-                    class="inputsearch"
-                    value="build this webpage"
-                    autofocus
-                  />
-                  <button
-                    class="close-icon"
-                    type="reset"
-                    title="Clear"
-                  ></button>
-                  <span>
-                    <svg
-                      class="lupa"
-                      focusable="false"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 24 24"
-                    >
-                      <path
-                        d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
-                      ></path>
-                    </svg>
-                  </span>
-                </div>
+    <div class="div-body">
+      <div class="div-header">
+        <header>
+          <div class="headermain">
+            <div class="leftheader">
+              <div id="logo">
+                <img
+                  src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png"
+                />
               </div>
-            </form>
+              <form action="" method="get">
+                <div class="anotherone">
+                  <div class="searchbox">
+                    <input
+                      type="search"
+                      maxlength="2048"
+                      class="inputsearch"
+                      value="build this webpage"
+                      autofocus
+                    />
+                    <button
+                      class="close-icon"
+                      type="reset"
+                      title="Clear"
+                    ></button>
+                    <span>
+                      <svg
+                        class="lupa"
+                        focusable="false"
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 24 24"
+                      >
+                        <path
+                          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
+                        ></path>
+                      </svg>
+                    </span>
+                  </div>
+                </div>
+              </form>
+            </div>
+            <div class="rightheader">
+              <a href="#" class="moreoptions">
+                <svg class="sixdots" focusable="false" viewBox="0 0 24 24">
+                  <path
+                    d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"
+                  ></path>
+                </svg>
+              </a>
+              <button type="button" id="signin">Sign in</button>
+            </div>
           </div>
-          <div class="rightheader">
-            <a href="#" class="moreoptions">
-              <svg class="sixdots" focusable="false" viewBox="0 0 24 24">
-                <path
-                  d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"
-                ></path>
-              </svg>
-            </a>
-            <button type="button" id="signin">Sign in</button>
+          <div class="nav">
+            <ul>
+              <li>
+                <a href="#" class="active" id="linkcolor"
+                  ><i class="fas fa-search fa-gradient"></i> All</a
+                >
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-youtube"></i> Videos</a>
+              </li>
+              <li>
+                <a href="#"><i class="fas fa-map-marker-alt"></i> Maps</a>
+              </li>
+              <li>
+                <a href="#"><i class="fas fa-image"></i> Images</a>
+              </li>
+              <li>
+                <a href="#"><i class="fas fa-newspaper"></i> News</a>
+              </li>
+              <li>
+                <a href="#"><i class="fas fa-chevron-circle-down"></i> More</a>
+              </li>
+            </ul>
+            <ul>
+              <li><a href="#">Settings</a></li>
+              <li><a href="#">Tools</a></li>
+            </ul>
           </div>
-        </div>
-        <div class="nav">
-          <ul>
-            <li>
-              <a href="#" class="active"><i class="fas fa-search"></i> All</a>
-            </li>
-            <li>
-              <a href="#"><i class="fab fa-youtube"></i> Videos</a>
-            </li>
-            <li>
-              <a href="#"><i class="fas fa-map-marker-alt"></i> Maps</a>
-            </li>
-            <li>
-              <a href="#"><i class="fas fa-image"></i> Images</a>
-            </li>
-            <li>
-              <a href="#"><i class="fas fa-newspaper"></i> News</a>
-            </li>
-            <li>
-              <a href="#"><i class="fas fa-chevron-circle-down"></i> More</a>
-            </li>
-          </ul>
-          <ul>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Tools</a></li>
-          </ul>
-        </div>
-      </header>
-
-      <footer>
-        <div id="country"><p>Denmark</p></div>
-        <div id="info">
-          <a href="#">Help</a>
-          <a href="#">Send feedback</a>
-          <a href="#">Privacy</a>
-          <a href="#">Terms</a>
-        </div>
-      </footer>
+        </header>
+      </div>
+      <div class="div-main">
+        <main>
+          <div class="timetoresults">
+            <p>About 118.000.000 results (0,49 seconds)</p>
+          </div>
+          <div class="results">
+            <article>
+              <p class="resultlink">
+                <a href="#"
+                  >https://victor-lf.github.io
+                  <span class="sublink"> › google-search-results</span></a
+                >
+              </p>
+              <h2><a href="#">build this webpage - GitHub Pages</a></h2>
+              <p>
+                <strong>build this webpage</strong>.
+                https://benjdelt.github.io/google-results/. With zero coding
+                experience, artist building 180 webpages in 180 days ...
+              </p>
+            </article>
+            <article>
+              <p class="resultlink">
+                <a href="#"
+                  >https://christine-27.github.io
+                  <span class="sublink"> › google-homepage</span></a
+                >
+              </p>
+              <h2><a href="#">build this webpage - GitHub Pages</a></h2>
+              <p>
+                With zero codingexperience, artist <strong>building</strong> 180
+                <strong>webpages</strong> . ... days ago, having never done any
+                programming in her life, Jennifer Dewalt built her first
+                webpage.
+              </p>
+            </article>
+          </div>
+        </main>
+      </div>
+      <div class="div-footer">
+        <footer>
+          <div id="country"><p>Denmark</p></div>
+          <div id="info">
+            <a href="#">Help</a>
+            <a href="#">Send feedback</a>
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+          </div>
+        </footer>
+      </div>
     </div>
   </body>
 </html>
