main esta feito

--- a/index.html
+++ b/index.html
@@ -121,6 +121,24 @@
                 experience, artist building 180 webpages in 180 days ...
               </p>
             </article>
+            <article id="id-alternatives">
+              <h4>People also search for</h4>
+              <div class="alternatives">
+                <ul>
+                  <li><a href="#">make a website from scratch</a></li>
+                  <li><a href="#">how to create a website free of cost</a></li>
+                  <li><a href="#">how to build a great website</a></li>
+                </ul>
+
+                <ul>
+                  <li><a href="#">learn how to build a website</a></li>
+                  <li>
+                    <a href="#">how to build a website from scratch pdf</a>
+                  </li>
+                  <li><a href="#">how to build a website for a client</a></li>
+                </ul>
+              </div>
+            </article>
             <article>
               <p class="resultlink">
                 <a href="#"
@@ -134,6 +152,144 @@
                 <strong>webpages</strong> . ... days ago, having never done any
                 programming in her life, Jennifer Dewalt built her first
                 webpage.
+              </p>
+            </article>
+            <article>
+              <p class="resultlink">
+                <a href="#"
+                  >https://www.websitebuilderexpert.com
+                  <span class="sublink"> › building-websi...</span></a
+                >
+              </p>
+              <h2>
+                <a href="#"
+                  >How to Build a Website 2021 | A Step-by-Step Beginner's
+                  Guide</a
+                >
+              </h2>
+              <p>
+                <span class="datearticle">6 days ago — </span>Anyone can
+                <strong>build</strong> a <strong>website</strong> with the right
+                tools - and the right guide! We'll show you how to make yours in
+                just 9 steps.
+              </p>
+            </article>
+            <article>
+              <p class="resultlink">
+                <a href="#"
+                  >https://victor-lf.github.io
+                  <span class="sublink"> › google-search-results</span></a
+                >
+              </p>
+              <h2><a href="#">build this webpage - GitHub Pages</a></h2>
+              <p>
+                <strong>build this webpage</strong>.
+                https://benjdelt.github.io/google-results/. With zero coding
+                experience, artist building 180 webpages in 180 days ...
+              </p>
+            </article>
+            <article>
+              <p class="resultlink">
+                <a href="#"
+                  >https://christine-27.github.io
+                  <span class="sublink"> › google-homepage</span></a
+                >
+              </p>
+              <h2><a href="#">build this webpage - GitHub Pages</a></h2>
+              <p>
+                With zero codingexperience, artist <strong>building</strong> 180
+                <strong>webpages</strong> . ... days ago, having never done any
+                programming in her life, Jennifer Dewalt built her first
+                webpage.
+              </p>
+            </article>
+            <article>
+              <p class="resultlink">
+                <a href="#"
+                  >https://www.websitebuilderexpert.com
+                  <span class="sublink"> › building-websi...</span></a
+                >
+              </p>
+              <h2>
+                <a href="#"
+                  >How to Build a Website 2021 | A Step-by-Step Beginner's
+                  Guide</a
+                >
+              </h2>
+              <p>
+                <span class="datearticle">6 days ago — </span>Anyone can
+                <strong>build</strong> a <strong>website</strong> with the right
+                tools - and the right guide! We'll show you how to make yours in
+                just 9 steps.
+              </p>
+            </article>
+            <article>
+              <p class="resultlink">
+                <a href="#"
+                  >https://victor-lf.github.io
+                  <span class="sublink"> › google-search-results</span></a
+                >
+              </p>
+              <h2><a href="#">build this webpage - GitHub Pages</a></h2>
+              <p>
+                <strong>build this webpage</strong>.
+                https://benjdelt.github.io/google-results/. With zero coding
+                experience, artist building 180 webpages in 180 days ...
+              </p>
+            </article>
+            <article>
+              <p class="resultlink">
+                <a href="#"
+                  >https://christine-27.github.io
+                  <span class="sublink"> › google-homepage</span></a
+                >
+              </p>
+              <h2><a href="#">build this webpage - GitHub Pages</a></h2>
+              <p>
+                With zero codingexperience, artist <strong>building</strong> 180
+                <strong>webpages</strong> . ... days ago, having never done any
+                programming in her life, Jennifer Dewalt built her first
+                webpage.
+              </p>
+            </article>
+            <article>
+              <p class="resultlink">
+                <a href="#"
+                  >https://www.websitebuilderexpert.com
+                  <span class="sublink"> › building-websi...</span></a
+                >
+              </p>
+              <h2>
+                <a href="#"
+                  >How to Build a Website 2021 | A Step-by-Step Beginner's
+                  Guide</a
+                >
+              </h2>
+              <p>
+                <span class="datearticle">6 days ago — </span>Anyone can
+                <strong>build</strong> a <strong>website</strong> with the right
+                tools - and the right guide! We'll show you how to make yours in
+                just 9 steps.
+              </p>
+            </article>
+            <article>
+              <p class="resultlink">
+                <a href="#"
+                  >https://www.websitebuilderexpert.com
+                  <span class="sublink"> › building-websi...</span></a
+                >
+              </p>
+              <h2>
+                <a href="#"
+                  >How to Build a Website 2021 | A Step-by-Step Beginner's
+                  Guide</a
+                >
+              </h2>
+              <p>
+                <span class="datearticle">6 days ago — </span>Anyone can
+                <strong>build</strong> a <strong>website</strong> with the right
+                tools - and the right guide! We'll show you how to make yours in
+                just 9 steps.
               </p>
             </article>
           </div>
