--- a/index.html
+++ b/index.html
@@ -122,7 +122,10 @@
               </p>
             </article>
             <article id="id-alternatives">
-              <h4>People also search for</h4>
+              <div class="closesuggestions">
+                <h5>People also search for</h5>
+                <button class="close-icon" type="reset" title="Clear"></button>
+              </div>
               <div class="alternatives">
                 <ul>
                   <li><a href="#">make a website from scratch</a></li>
@@ -154,6 +157,7 @@
                 webpage.
               </p>
             </article>
+
             <article>
               <p class="resultlink">
                 <a href="#"
@@ -187,6 +191,24 @@
                 https://benjdelt.github.io/google-results/. With zero coding
                 experience, artist building 180 webpages in 180 days ...
               </p>
+            </article>
+            <article class="alsoask">
+              <h2>People also ask</h2>
+              <div class="arrow-flex">
+                <div class="titles">
+                  <h3><a href="#">How can I create my own webpage?</a></h3>
+                  <h3><a href="#">Is it hard to build a Web page?</a></h3>
+                  <h3>
+                    <a href="#">How much does it cost to build a website?</a>
+                  </h3>
+                </div>
+                <div class="arrows">
+                  <p><a href="#">⌄</a></p>
+                  <p><a href="#">⌄</a></p>
+                  <p><a href="#">⌄</a></p>
+                </div>
+              </div>
+              <p id="feedback">Feedback</p>
             </article>
             <article>
               <p class="resultlink">
@@ -291,13 +313,89 @@
                 tools - and the right guide! We'll show you how to make yours in
                 just 9 steps.
               </p>
+            </article>
+            <article>
+              <h2>Related searches</h2>
+              <div class="relatedsearches">
+                <div class="relatedsearch">
+                  <span
+                    ><a href="a"><i class="fas fa-search"></i></a
+                  ></span>
+                  <p><a href="#">make a website from scratch</a></p>
+                </div>
+
+                <div class="relatedsearch">
+                  <span
+                    ><a href="a"><i class="fas fa-search"></i></a
+                  ></span>
+                  <p><a href="a">how to create a website free of cost</a></p>
+                </div>
+                <div class="relatedsearch">
+                  <span
+                    ><a href="a"><i class="fas fa-search"></i></a
+                  ></span>
+                  <p><a href="a">learn how to build a website</a></p>
+                </div>
+                <div class="relatedsearch">
+                  <span
+                    ><a href="a"><i class="fas fa-search"></i></a
+                  ></span>
+                  <p><a href="a">how to build a great website</a></p>
+                </div>
+                <div class="relatedsearch">
+                  <span
+                    ><a href="a"><i class="fas fa-search"></i></a
+                  ></span>
+                  <p><a href="a">how to build a website from scratch pdf</a></p>
+                </div>
+                <div class="relatedsearch">
+                  <span
+                    ><a href="a"><i class="fas fa-search"></i></a
+                  ></span>
+                  <p><a href="a">how to build a website for a client</a></p>
+                </div>
+              </div>
+            </article>
+            <article>
+              <div class="searchpages">
+                <ul class="searchpagesliletter">
+                  <li class="blueL">G</li>
+                  <li class="redL">o</li>
+                  <li class="letterO"><a href="#">o</a></li>
+                  <li class="letterO"><a href="#">o</a></li>
+                  <li class="letterO"><a href="#">o</a></li>
+                  <li class="letterO"><a href="#">o</a></li>
+                  <li class="letterO"><a href="#">o</a></li>
+                  <li class="blueL">g</li>
+                  <li class="greenL">l</li>
+                  <li class="redL">e</li>
+                </ul>
+                <ul class="searchpagesli">
+                  <li>&nbsp</li>
+                  <li>1</li>
+                  <li><a href="#">2</a></li>
+                  <li><a href="#">3</a></li>
+                  <li><a href="#">4</a></li>
+                  <li><a href="#">5</a></li>
+                  <li><a href="#">6</a></li>
+                  <li>&nbsp</li>
+                  <li>&nbsp</li>
+                  <li>&nbsp</li>
+                </ul>
+              </div>
             </article>
           </div>
         </main>
       </div>
       <div class="div-footer">
         <footer>
-          <div id="country"><p>Denmark</p></div>
+          <div class="country">
+            <p class="firstp">Universe</p>
+            <p>
+              <strong>Outer Space</strong> - From your Internet address -
+              <a href="#">Use precise location</a> - <a href="#">Learn more</a>
+            </p>
+          </div>
           <div id="info">
             <a href="#">Help</a>
             <a href="#">Send feedback</a>
