--- a/index.html
+++ b/index.html
@@ -357,31 +357,45 @@
               </div>
             </article>
             <article>
-              <div class="searchpages">
-                <ul class="searchpagesliletter">
-                  <li class="blueL">G</li>
-                  <li class="redL">o</li>
-                  <li class="letterO"><a href="#">o</a></li>
-                  <li class="letterO"><a href="#">o</a></li>
-                  <li class="letterO"><a href="#">o</a></li>
-                  <li class="letterO"><a href="#">o</a></li>
-                  <li class="letterO"><a href="#">o</a></li>
-                  <li class="blueL">g</li>
-                  <li class="greenL">l</li>
-                  <li class="redL">e</li>
-                </ul>
-                <ul class="searchpagesli">
-                  <li>&nbsp</li>
-                  <li>1</li>
-                  <li><a href="#">2</a></li>
-                  <li><a href="#">3</a></li>
-                  <li><a href="#">4</a></li>
-                  <li><a href="#">5</a></li>
-                  <li><a href="#">6</a></li>
-                  <li>&nbsp</li>
-                  <li>&nbsp</li>
-                  <li>&nbsp</li>
-                </ul>
+              <div class="searchandnext">
+                <div class="searchpages">
+                  <ul class="searchpagesliletter">
+                    <li class="blueL">G</li>
+                    <li class="redL">o</li>
+                    <li class="letterO"><a href="#">o</a></li>
+                    <li class="letterO"><a href="#">o</a></li>
+                    <li class="letterO"><a href="#">o</a></li>
+                    <li class="letterO"><a href="#">o</a></li>
+                    <li class="letterO"><a href="#">o</a></li>
+                    <li class="letterO"><a href="#">o</a></li>
+                    <li class="letterO"><a href="#">o</a></li>
+                    <li class="letterO"><a href="#">o</a></li>
+                    <li class="letterO"><a href="#">o</a></li>
+                    <li class="blueL">g</li>
+                    <li class="greenL">l</li>
+                    <li class="redL">e</li>
+                  </ul>
+                  <ul class="searchpagesli">
+                    <li>&nbsp</li>
+                    <li class="pagenumber">1</li>
+                    <li class="pagenumber"><a href="#">2</a></li>
+                    <li class="pagenumber"><a href="#">3</a></li>
+                    <li class="pagenumber"><a href="#">4</a></li>
+                    <li class="pagenumber"><a href="#">5</a></li>
+                    <li class="pagenumber"><a href="#">6</a></li>
+                    <li class="pagenumber"><a href="#">7</a></li>
+                    <li class="pagenumber"><a href="#">8</a></li>
+                    <li class="pagenumber"><a href="#">9</a></li>
+                    <li class="pagenumber"><a href="#">10</a></li>
+                    <li>&nbsp</li>
+                    <li>&nbsp</li>
+                    <li>&nbsp</li>
+                  </ul>
+                </div>
+                <div id="next">
+                  <p id="nextarrow">></p>
+                  <p>Next</p>
+                </div>
               </div>
             </article>
           </div>
