--- a/index.html
+++ b/index.html
@@ -6,16 +6,8 @@
     <title>Google</title>
     <link rel="stylesheet" href="styles/style.css" />
     <link
-      href="/home/kogepan/node_modules/@fortawesome/fontawesome-free/css/fontawesome.css"
       rel="stylesheet"
-    />
-    <link
-      href="/home/kogepan/node_modules/@fortawesome/fontawesome-free/css/brands.css"
-      rel="stylesheet"
-    />
-    <link
-      href="/home/kogepan/node_modules/@fortawesome/fontawesome-free/css/solid.css"
-      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
     />
   </head>
   <body>
@@ -45,29 +37,14 @@
                       title="Clear"
                     ></button>
                     <span>
-                      <svg
-                        class="lupa"
-                        focusable="false"
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 24 24"
-                      >
-                        <path
-                          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
-                        ></path>
-                      </svg>
+                      <i class="fas fa-search"></i>
                     </span>
                   </div>
                 </div>
               </form>
             </div>
             <div class="rightheader">
-              <a href="#" class="moreoptions">
-                <svg class="sixdots" focusable="false" viewBox="0 0 24 24">
-                  <path
-                    d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"
-                  ></path>
-                </svg>
-              </a>
+              <a href="#" class="moreoptions"> </a>
               <button type="button" id="signin">Sign in</button>
             </div>
           </div>
