switched down chevron to font awesome

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                       type="reset"
                       title="Clear"
                     ></button>
-                    <span>
+                    <span class="magnifglass">
                       <i class="fas fa-search"></i>
                     </span>
                   </div>
@@ -180,9 +180,17 @@
                   </h3>
                 </div>
                 <div class="arrows">
-                  <p><a href="#">⌄</a></p>
-                  <p><a href="#">⌄</a></p>
-                  <p><a href="#">⌄</a></p>
+                  <p>
+                    <a href="#">
+                      <i class="fas fa-angle-down"></i>
+                    </a>
+                  </p>
+                  <p>
+                    <a href="#"><i class="fas fa-angle-down"></i></a>
+                  </p>
+                  <p>
+                    <a href="#"><i class="fas fa-angle-down"></i></a>
+                  </p>
                 </div>
               </div>
               <p id="feedback">Feedback</p>
